Fix wrong padding

--- a/qdarkstyle/qss/_styles.scss
+++ b/qdarkstyle/qss/_styles.scss
@@ -1678,7 +1678,7 @@ QTabBar, QDockWidget QTabBar {
 
         &:bottom:!selected {
             border-top: 2px solid $COLOR_BACKGROUND_1;
-            margin-bottom: 3px;
+            margin-bottom: 2px;
         }
 
         &:left:!selected {
